Refactoring build.sh